# Rail-PVC

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODEX.md  Makefile  PRODUCT.md  README.md  REVIEW.md  SESSION_LOG.md  STATUS.md  TASKS.md  WORKPLAN.md
REFERENCES/: Rail PVC Billing Automation Strategy.md  Railway PVC Strategy.html  ir-pvc-existing-app-brief.html  railway-pvc-analysis.md
backend/: .env.example  alembic.ini  main.py  pyproject.toml
backend/api/: bills.py  carry_forwards.py  contract_items.py  contracts.py  deps.py  documents.py  extra_items.py  indices.py  pvc_rules.py  pvc_runs.py  schedules.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 001_tenants_users.py  002_contracts.py  003_bills.py  004_carry_forwards.py  005_index_series.py  006_pvc_rule_sets.py  007_pvc_runs.py  008_extra_items_documents.py  009_rls_policies.py  010_railway_zone.py  011_security_hardening.py  012_trace_column.py  013_admin_flag.py
backend/models/: db.py
backend/services/: auth.py  errors.py  pvc_service.py
backend/tests/: test_c1_bills_create.py  test_idx_indices.py  test_p3_08_clean_import.py  test_p5_001_contracts_put.py  test_p5_f3_items_crud.py
engine/: calculator.py  components.py  pyproject.toml  types.py  w_derivation.py
engine/tests/: test_calculator.py  test_components.py  test_hypothesis.py  test_import.py  test_real_tender_fixtures.py  test_w_derivation.py
engine/tests/fixtures/real_tenders/: bct_2425_252_bill1_q2.json  bct_2425_252_bill2_q4.json
frontend/: package-lock.json  package.json
seeds/: README.md  seed_indices.py  (+1 more)
(+19 files in other folders)
