[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "railpvc-engine",
    "supabase>=2.0",
    "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
railpvc-engine = { path = "../engine", editable = true }
