[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "railpvc-engine",
    "sqlalchemy[asyncio]>=2.0",
    "supabase>=2.0",
    "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
railpvc-engine = { path = "../engine", editable = true }
